--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -40,6 +40,8 @@
       border-top: none;
       width: 98%;
       padding: 0.5em;
+      color: white;
+      font-family: "Inter", sans-serif;
     }
   }
 }
