--- a/benchmarkcss/bench.css
+++ b/benchmarkcss/bench.css
@@ -1,5 +1,6 @@
 h1 {
   font-size: 3em;
+  color: aliceblue;
 }
 .transpTitle {
   color: rgba(255, 255, 255, 0.917);
@@ -40,4 +41,5 @@ h1 {
   display: flex;
   flex-direction: row;
   margin-top: 60px;
+  color: aliceblue;
 }
