--- a/assets/css/Results.css
+++ b/assets/css/Results.css
@@ -62,3 +62,46 @@ main .questions {
   -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 255, 255, 0.8);
   box-shadow: 1px 1px 30px 2px rgba(0, 255, 255, 0.8);
 }
+
+/* GRAFICO A CIAMBELLA SVG */
+
+/* Imposto la posizione e la dimensione del grafico */
+.circle-graphic {
+  position: relative;
+  right: 15px;
+  height: 400px;
+  width: 400px;
+}
+
+/* Removes SVG styling that would hide the time label */
+.base-chart__circle {
+  fill: none;
+  stroke: none;
+}
+
+/* The SVG path that displays the timer's progress */
+.base-chart__path-elapsed {
+  stroke-width: 15px;
+  stroke: grey;
+}
+
+/* MOSTRA TESTO ALL'INTERNO DEL GRAFICO */
+.base-chart__label {
+  position: absolute;
+
+  /* Size should match the parent container */
+  width: 400px;
+  height: 400px;
+
+  /* Keep the label aligned to the top */
+  top: 0;
+  left: 15px;
+
+  /* Create a flexible box that centers content vertically and horizontally */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* Sort of an arbitrary number; adjust to your liking */
+  font-size: 16px;
+}
