--- a/assets/css/bench.css
+++ b/assets/css/bench.css
@@ -1,27 +1,24 @@
-h1 {
-  font-size: 3em;
-}
-.transpTitle {
+#container-titles {
   color: white;
+  font-size: 3em;
 }
 
 .containerMain {
   text-align: center;
 }
+
 .divQuestion {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 5em;
 }
-.check:checked {
-  background-color: red;
-  color: yellow;
-}
-.colum {
+
+#colum {
   display: flex;
   flex-direction: column;
 }
+
 .button {
   width: 330px;
   height: 65px;
@@ -38,6 +35,7 @@ h1 {
   -webkit-box-shadow: -2px -3px 0px 0px rgba(255, 255, 255, 0.75);
   -moz-box-shadow: -2px -3px 0px 0px rgba(255, 255, 255, 0.75);
 }
+
 .footerQuestions {
   justify-content: center;
   display: flex;
@@ -45,6 +43,11 @@ h1 {
   margin-top: 60px;
   color: aliceblue;
 }
-.butt {
-  background-color: rgb(255, 0, 178);
+
+.correct {
+  background-color: green;
+}
+
+.incorrect {
+  background-color: red;
 }
