--- a/assets/css/bench.css
+++ b/assets/css/bench.css
@@ -1,47 +1,47 @@
-#container-titles {
+#containerTitles {
   color: white;
-  font-size: 3em;
+  font-size: 2.8em;
+  margin: 30px 40px 0px 40px;
+  font-weight: 500;
+  height: 135px;
 }
 
 .containerMain {
   text-align: center;
 }
 
-.divQuestion {
+.divTimer {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-top: 5em;
+  justify-content: space-between;
 }
-
 #colum {
-  display: flex;
-  flex-direction: column;
+  margin-top: 30px;
+  width: 1000px;
+  height: 260px;
+  display: inline-block;
 }
-
 .button {
   width: 330px;
   height: 65px;
   margin: 2em;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 30px;
+  border: none;
   background-color: rgba(255, 255, 255, 0.115);
   color: white;
-  font-weight: bold;
-  box-shadow: -2px -3px 0px 0px rgba(255, 255, 255, 0.75);
-  -webkit-box-shadow: -2px -3px 0px 0px rgba(255, 255, 255, 0.75);
-  -moz-box-shadow: -2px -3px 0px 0px rgba(255, 255, 255, 0.75);
+  box-shadow: -0px -3px 0px 1px white;
+  -webkit-box-shadow: 0px -3px 0px 1px white;
 }
 
 .footerQuestions {
-  justify-content: center;
-  display: flex;
-  flex-direction: row;
-  margin-top: 60px;
-  color: aliceblue;
+  text-align: center;
+  margin-top: 40px;
+  color: white;
+  p {
+    font-size: 1.2em;
+    letter-spacing: 1.2px;
+  }
 }
 
 .correct {
