--- a/assets/css/timer.css
+++ b/assets/css/timer.css
@@ -41,7 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 45px;
   color: white;
 }
