--- a/assets/css/bench.css
+++ b/assets/css/bench.css
@@ -1,7 +1,7 @@
 #containerTitles {
   color: white;
-  font-size: 2.8em;
-  margin: 30px 40px 0px 40px;
+  font-size: 2em;
+  margin: 30px 40px 10px 40px;
   font-weight: 500;
   height: 135px;
 }
@@ -44,10 +44,13 @@
   }
 }
 
-.correct {
+.correct2 {
   background-color: green;
 }
 
 .incorrect {
   background-color: red;
+}
+.showBench {
+  display: none;
 }
