--- a/assets/css/Results.css
+++ b/assets/css/Results.css
@@ -24,6 +24,8 @@ main {
 .wrong {
   font-family: "Outfit", sans-serif;
   font-size: 60px;
+  position: relative;
+  bottom: 100px;
 }
 
 .correct {
@@ -100,7 +102,7 @@ main .questions {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  flex-direction: column;
   font-size: 16px;
 }
 
@@ -115,14 +117,23 @@ main .questions {
 
 /* POSIZIONE DEL TESTO ALL'INTERNO DEL GRAFICO */
 .results-questions {
-  position: absolute;
-  top: 115px;
   font-size: 16px;
+  font-weight: 600;
   color: white;
-  left: 100;
+  margin-bottom: 25px;
 }
 
 /* TESTO DEL GRAFICO */
 .colorato {
   color: #00ffff;
+  margin-top: -60px;
+  font-weight: 600;
+}
+.testo-certificato {
+  width: 55%;
+  p {
+    font-size: 13px;
+    line-height: 22px;
+    font-weight: 300;
+  }
 }
