--- a/assets/css/Results.css
+++ b/assets/css/Results.css
@@ -110,7 +110,8 @@ main .questions {
 .base-chart__path-remaining {
   /* imposto la larghezza del svg originale  */
   stroke-width: 15px;
-
+  transform: rotate(90deg);
+  transform-origin: 50% 50%;
   /* ARROTONDAMENTO LINEA COME QUELLA DEL SVG ORIGINALE */
   stroke-linecap: inherit;
 }
