--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -78,15 +78,21 @@ button {
 }
 
 .thanks-container p {
-  margin-top: 5em;
+  margin-top: 4em;
+  margin-bottom: 60px;
+  font-weight: 600;
 }
 
 .thanks-container span {
   font-size: 0.8em;
+  font-weight: 300;
 }
 
 .btn-newtry {
   padding: 10px 20px;
   margin-left: 2em;
   font-size: 0.4em;
+  display: block;
+  margin: auto;
+  margin-top: 25px;
 }
