--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -74,25 +74,40 @@ button {
 }
 
 .btn-information {
-  margin-top: 4em;
+  margin-top: -16px;
 }
 
 .thanks-container p {
-  margin-top: 4em;
-  margin-bottom: 60px;
+  margin-top: 3em;
+  margin-bottom: 40px;
   font-weight: 600;
+  font-size: 1em;
 }
 
 .thanks-container span {
   font-size: 0.8em;
   font-weight: 300;
+  font-family: "outfit";
 }
 
 .btn-newtry {
-  padding: 10px 20px;
-  margin-left: 2em;
-  font-size: 0.4em;
+  font-size: 23px;
   display: block;
   margin: auto;
   margin-top: 25px;
+  padding: 10px 10px;
+  text-transform: uppercase;
+}
+p.moreInfoOur {
+  margin-top: 50px;
+  font-size: 0.6em;
+  font-weight: 300;
+  font-family: "outfit";
+}
+p.copyright {
+  color: white;
+  font-size: 10px;
+  margin-top: 90px;
+  font-weight: 200;
+  font-family: "outfit";
 }
