--- a/assets/css/Results.css
+++ b/assets/css/Results.css
@@ -111,6 +111,9 @@ main .questions {
   /* imposto la larghezza del svg originale  */
   stroke-width: 15px;
 
+  transform: rotate(30deg);
+  transform-origin: 50% 50%;
+
   /* ARROTONDAMENTO LINEA COME QUELLA DEL SVG ORIGINALE */
   stroke-linecap: inherit;
 }
