--- a/assets/css/welcome.css
+++ b/assets/css/welcome.css
@@ -46,7 +46,7 @@
       margin-bottom: 20px;
     }
     select {
-      background-color: transparent;
+      background-color: #d20094;
       color: white;
       border-radius: 10px;
       margin-right: 15px;
